Big commit! Got inheretence working on objects, got game state and HTML view to instantiate, got main function and loop function to work; next up, fiinally doing the actual game logic.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,13 @@
 body {
     color: red;
-    background: green;
+    background: green
 }
 img {
-    background: #a4ae68;
+    background: #a4ae68
+}
+.darkImg{
+    background: #a4ae68    
+}
+.lightImg{
+    background: #80AE68    
 }
