Got baseline snake movement working. Calling it a night, will resume tomorrow and: Complete snake movement; complete apple functionality; begin mongoose movement

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,9 +5,9 @@ body {
 img {
     background: #a4ae68
 }
-.darkImg{
-    background: #a4ae68    
+.dark{
+    background: #68ae50
 }
-.lightImg{
-    background: #80AE68    
+.light{
+    background: #a4ae68
 }
