--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,3 +47,4 @@ const opponentName = "{{opponentName}}";
 const mongoosePath = "{{mongoosePath}}";
 const results = [{{results}}];
 </script>
+<script src="/js/snake.js"></script>
