Got most of the snake game front end functionality working; Snake moves based on player input, mongoose moves based on log data, Apples spawn in a pattern. Next I'll be connecting it to the database functions.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-    color: red;
+    color: white;
     background: green
 }
 img {
@@ -10,4 +10,7 @@ img {
 }
 .light{
     background: #a4ae68
+}
+.blood{
+    background: #A51414
 }
