--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,23 +1,21 @@
+
+<div class="container">
+
+<h1 class="text-center">Snake vs Mongoose</h1>
 <p id="gameBoard">
-<img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png">
-</br>
-<img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png">
-</br>
-<img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png">
-</br>
-<img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png">
-</br>
-<img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png">
-</br>
-<img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png">
-</br>
-<img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png"><img src="/img/apple.png">
+<img src="/img/apple.png">
 </p>
-
-
-<h1>{{user}}</h1>
-<p>You vs {{opponentName}} using the moveset {{mongoosePath}}</p>
+<h1 style="width:700px; align: center">
+<span style="float:left;">⏰ <span id="clock">30</span></span>
+<span style="float:right;">
+<span style="color:#b26dff">BradOFarrell</span>
+vs
+<span style="color:#f3a065">{{opponentName}}</span></span>
+</h1>
+<p style="clear:both"></br></br></br>
+You vs {{opponentName}} using the moveset {{mongoosePath}}</p>
 <p>{{results}}</p>
+</div>
 
 
 <p id="postform">
