Added credits for artist.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
     vs
     <span style="color:#f3a065">{{opponentName}}</span></span>
     </h3>
-    <p style="clear:both"><br>This is an asynchronous multiplayer game. You control the snake with the arrow keys and the mongoose is controlled by ghost data left by another player - in this case, your opponent is {{opponentName}}. Try to get as many apples as you can while avoiding crashing into yourself, the mongoose, or the borders of the stage. If you can survive for 30 seconds, you will be able to enter your name and submit your data so that it can appear in another player's game as a mongoose. </p>
+    <p style="clear:both"><br>This is an asynchronous multiplayer game. You control the snake with the arrow keys and the mongoose is controlled by ghost data left by another player - in this case, your opponent is {{opponentName}}. Try to get as many apples as you can while avoiding crashing into yourself, the mongoose, or the borders of the stage. If you can survive for 30 seconds, you will be able to enter your name and submit your data so that it can appear in another player's game as a mongoose. <em>Code by Brad O'Farrell, art by Vondell Swain.</em></p>
 </div>
 
 <div class="container" style="width:700px; background: #19440A; visibility:hidden;" id="resultsPage">
